<resources>
    <string name="app_name">HW8</string>
    <string name="create_new_task">Create New Task</string>
    <string name="priority">Priority</string>
    <string name="add_task">Add Task</string>
    <string name="task_description">Task Description</string>
    <string name="task_name">Task Name</string>
    <string name="hw8_tasklist">HW8 TaskList</string>
    <string name="delete_task">Delete Task</string>
    <string name="back">Back</string>
    <string-array name="priorityLevels">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    
</resources>