<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">




    <TextView
        android:id="@+id/textname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textSize="25dp"

        />

    <TextView
        android:id="@+id/enterTextName"
        android:layout_toRightOf="@id/textname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textDec"
        android:layout_below="@id/textname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_description"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"

        />

    <TextView
        android:id="@+id/enterTextDesc"
        android:layout_below="@id/textDec"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        />


    <TextView
        android:id="@+id/textViewPriority"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/enterTextDesc"
        android:text="@string/priority"
        android:textAlignment="center"
        android:textSize="25sp"/>
    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_below="@id/textViewPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/priorityLevels"


        />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_below="@id/prioritySpinner"
        android:text="@string/delete_task"
        />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deleteButton"
        android:text="@string/back"/>





</RelativeLayout>